chyba dziala na tyle na ile moze dzialać